[project]
name = "knowledge_router"
version = "0.1.0"
description = "Knowledge Router multi-agent system"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-core",
    "langgraph",
    "pydantic",
    "langchain-openai",
    "langchain-community",
    "dashscope",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_router"]
