[project]
name = "knowledge_router"
version = "0.1.0"
description = "LangGraph-based multi-agent knowledge router for GitHub, Notion, Slack, and Web"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-core",
    "langgraph",
    "pydantic",
    "langchain-openai",
    "langchain-community",
    "dashscope",
    "python-dotenv",
    "tavily-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_router"]
